# Auto-SDET

./: .env.example  .gitignore  README.md  pyproject.toml
_deprecated/parallel_attempt/graph_nodes/: combiner.py  generator_worker.py  splitter.py
_deprecated/parallel_attempt/prompts/: generator_worker.py
_deprecated/parallel_attempt/tests/: test_combiner.py
benchmark_results/: results.json
examples/: calculator.py  test_calculator.py
scripts/: benchmark.py  probe_structured_thinking.py
src/auto_sdet/: __init__.py  cli.py  config.py
src/auto_sdet/graph/: __init__.py  graph.py  router.py
src/auto_sdet/graph/nodes/: evaluator.py  executor.py  generator.py  memory_manager.py  reflector.py
src/auto_sdet/models/: __init__.py  schemas.py
src/auto_sdet/prompts/: evaluator.py  generator.py  memory_manager.py  reflector.py
src/auto_sdet/tools/: ast_extractor.py  e2b_sandbox.py  llm_factory.py  mcp_context.py  mcp_tools.py  memory_store.py  ruff_checker.py
tests/: test_ast_extractor.py  test_e2b_helpers.py  test_extract_code.py  test_generator.py  test_reflector.py  test_router.py  test_ruff_checker.py  test_schemas.py
